<resources>
    <string name="Currently_the_latest_version">Already the latest version.</string>
    <string name="Discover_new_version">New version found (</string>
    <string name="Download_failed">Download failed</string>
    <string name="NO">Cancel</string>
    <string name="Successfully_Registered">Registration complete</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="agreement">Agree</string>
    <string name="app_name">Egg NS</string>
    <string name="back">Back</string>
    <string name="backup_success">Back up done</string>
    <string name="bind_error_without_net">Binding contact info failed, check the network and retry</string>
    <string name="bind_failure">Binding contact info failed</string>
    <string name="bind_success">Binding contact info complete</string>
    <string name="cancel">Cancel</string>
    <string name="checkApkUpdate_faile_hint">Failed to obtain version info, please check your network.</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="configure_global_games_not_now">Not now</string>
    <string name="configure_global_games_setting">Settings</string>
    <string name="configure_global_games_sub_title">Please set the directory where the game, key, and font are located. After setting, it will automatically scan the game.</string>
    <string name="configure_global_games_title">No game added yet</string>
    <string name="confirm_password_not_empty">Confirm password required</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误日志</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生意外错误。\10抱歉，给您带来不便。</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="dialog_account_title">Please select an account to enter:</string>
    <string name="dialog_add_account">Add account</string>
    <string name="dialog_language_sys">To set the following system language, restart the application to take effect</string>
    <string name="dialog_no_doc">There are no documents</string>
    <string name="dialog_start_game">Enter the game</string>
    <string name="download_successful">Download complete</string>
    <string name="downloading">Downloading</string>
    <string name="file_manager_dir_enter">Please uncheck the selected file, and then enter the next level</string>
    <string name="file_manager_no_select">No selected item</string>
    <string name="file_manager_storage">Internal storage equipment</string>
    <string name="file_term">Item</string>
    <string name="game_detail_back">Back</string>
    <string name="game_detail_game_setting">Game Settings</string>
    <string name="game_detail_start_game">Start</string>
    <string name="game_setting_base_mode_title">Dock mode：</string>
    <string name="game_setting_cur_game_title">Only for the current game</string>
    <string name="game_setting_expansion_pack_title">Expansion pack</string>
    <string name="game_setting_global_add_file">Add</string>
    <string name="game_setting_global_font_path_title">Font file location</string>
    <string name="game_setting_global_game_path_title">Game root directory location：</string>
    <string name="game_setting_global_game_title">Fit all games</string>
    <string name="game_setting_global_key_path_title">Key folder location：</string>
    <string name="game_setting_global_language_title">Language：</string>
    <string name="game_setting_global_region_title">Region:</string>
    <string name="game_setting_global_select_file">Change</string>
    <string name="game_setting_global_settings">Global Settings</string>
    <string name="game_setting_global_time_zone_title">Time zone：</string>
    <string name="game_setting_global_tips">Note: If the location of the key file, font file, and the root directory of the game is not added, there may be errors in starting the game.</string>
    <string name="game_setting_global_user_skip_title">Skip user select when start a game</string>
    <string name="game_setting_gpu_title">Asynchronous GPU：</string>
    <string name="game_setting_other_settings">Other Settings</string>
    <string name="game_setting_skip_frame_title">Auto Skip Frame：</string>
    <string name="global_language_0">Japanese</string>
    <string name="global_language_1">English (default)</string>
    <string name="global_language_10">Russian</string>
    <string name="global_language_11">Taiwanese</string>
    <string name="global_language_12">British English</string>
    <string name="global_language_13">Canadian French</string>
    <string name="global_language_14">Latin American Spanish</string>
    <string name="global_language_15">Simplified Chinese</string>
    <string name="global_language_16">Traditional Chinese</string>
    <string name="global_language_2">French</string>
    <string name="global_language_3">German</string>
    <string name="global_language_4">Italian</string>
    <string name="global_language_5">Spanish</string>
    <string name="global_language_6">Chinese</string>
    <string name="global_language_7">Korean</string>
    <string name="global_language_8">Dutch</string>
    <string name="global_language_9">Portuguese</string>
    <string name="global_region_0">Japan</string>
    <string name="global_region_1">USA</string>
    <string name="global_region_2">Europe</string>
    <string name="global_region_3">Australia</string>
    <string name="global_region_4">China</string>
    <string name="global_region_5">Korea</string>
    <string name="global_region_6">Taiwan</string>
    <string name="global_timeZone_0">auto</string>
    <string name="global_timeZone_1">default</string>
    <string name="global_timeZone_10">GB</string>
    <string name="global_timeZone_11">GB-Eire</string>
    <string name="global_timeZone_12">GMT</string>
    <string name="global_timeZone_13">GMT+0</string>
    <string name="global_timeZone_14">GMT-0</string>
    <string name="global_timeZone_15">GMT0</string>
    <string name="global_timeZone_16">Greenwich</string>
    <string name="global_timeZone_17">Hongkong</string>
    <string name="global_timeZone_18">HST</string>
    <string name="global_timeZone_19">Iceland</string>
    <string name="global_timeZone_2">CET</string>
    <string name="global_timeZone_20">Iran</string>
    <string name="global_timeZone_21">Israel</string>
    <string name="global_timeZone_22">Jamaica</string>
    <string name="global_timeZone_23">Japan</string>
    <string name="global_timeZone_24">Kwajalein</string>
    <string name="global_timeZone_25">Libya</string>
    <string name="global_timeZone_26">MET</string>
    <string name="global_timeZone_27">MST</string>
    <string name="global_timeZone_28">MST7MDT</string>
    <string name="global_timeZone_29">Navajo</string>
    <string name="global_timeZone_3">CST6CDT</string>
    <string name="global_timeZone_30">NZ</string>
    <string name="global_timeZone_31">NZ-CHAT</string>
    <string name="global_timeZone_32">Poland</string>
    <string name="global_timeZone_33">Portugal</string>
    <string name="global_timeZone_34">PRC</string>
    <string name="global_timeZone_35">PST8PDT</string>
    <string name="global_timeZone_36">ROC</string>
    <string name="global_timeZone_37">ROK</string>
    <string name="global_timeZone_38">Singapore</string>
    <string name="global_timeZone_39">Turkey</string>
    <string name="global_timeZone_4">Cuba</string>
    <string name="global_timeZone_40">UCT</string>
    <string name="global_timeZone_41">Universal</string>
    <string name="global_timeZone_42">UTC</string>
    <string name="global_timeZone_43">W-SU</string>
    <string name="global_timeZone_44">WET</string>
    <string name="global_timeZone_45">Zulu</string>
    <string name="global_timeZone_5">EET</string>
    <string name="global_timeZone_6">Egypt</string>
    <string name="global_timeZone_7">Eire</string>
    <string name="global_timeZone_8">EST</string>
    <string name="select_picture_cancel">Cancel</string>
    <string name="select_picture_photograph">Take a picture</string>
    <string name="select_picture_select_from_album">Select from the album</string>
    <string name="smssdk_authorize_dialog_accept">同意</string>
    <string name="smssdk_authorize_dialog_reject">拒绝</string>
    <string name="smssdk_authorize_dialog_title">服务授权</string>
    <string name="smssdk_authorize_msg_sms">MobTech需要收集您的手机号码，以帮助您完成注册，确保您的账户安全。拒绝将导致正常功能无法使用。是否继续？</string>
    <string name="user_agreement">User agreement</string>
    <string name="user_archives">Save</string>
    <string name="user_archives1">Enter game via saves Backup/Restore Backup</string>
    <string name="user_language">Change language</string>
    <string name="user_language1">Supprot Chinese, English and Japanese</string>
    <string name="user_login_add_register">Add/Register an account</string>
    <string name="user_login_facebook">Facebook</string>
    <string name="user_login_logout">Log out</string>
    <string name="user_login_phone">Verification Code</string>
    <string name="user_login_phone_email">Email</string>
    <string name="user_login_user_name">User name</string>
    <string name="user_login_user_pwd">Password</string>
    <string name="user_login_user_register">Register</string>
    <string name="user_login_wechat">Wechat</string>
    <string name="user_privacy_agreement">Privacy agreement</string>
    <string name="user_register">Register</string>
    <string name="user_send_verify_code">Send code</string>
    <string name="user_verify_code">Verification code</string>
    <string name="user_version_update">Update</string>
</resources>