<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:tag="layout/activity_register_0" android:background="@drawable/bg_line1" android:paddingTop="80mm" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_line1" android:paddingBottom="@dimen/left_panel_padding" android:layout_width="@dimen/left_panel_width" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/btn_back" android:tag="binding_1" android:background="@color/color_bg_sub" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/iv" android:layout_width="20mm" android:layout_height="33mm" android:src="@drawable/nav_icon_back" android:scaleType="fitXY"/>
            <TextView android:textSize="36mm" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20mm" android:text="@string/game_detail_back"/>
        </LinearLayout>
        <TextView android:textSize="@dimen/font_big" android:textColor="@color/color_font_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100mm" android:text="@string/user_login_user_register" android:layout_below="@+id/btn_back"/>
        <ImageView android:background="@color/color_font_red" android:layout_width="180mm" android:layout_height="10mm" android:layout_marginTop="10mm"/>
    </LinearLayout>
    <LinearLayout android:background="@drawable/bg_line" android:paddingTop="20mm" android:paddingBottom="20mm" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
            <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="#0dffffff" android:padding="50mm" android:layout_width="1100mm" android:layout_height="wrap_content">
                <EditText android:textSize="@dimen/font_middle" android:id="@+id/et_username" android:tag="binding_2" android:background="@drawable/bg_circular_white_3" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_login_user_name" android:singleLine="true" android:maxLength="18" android:imeOptions="flagNoExtractUi"/>
                <EditText android:textSize="@dimen/font_middle" android:tag="binding_3" android:background="@drawable/bg_circular_white_3" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40mm" android:hint="@string/user_login_phone_email" android:singleLine="true" android:maxLength="26" android:imeOptions="flagNoExtractUi"/>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40mm">
                    <EditText android:textSize="@dimen/font_middle" android:tag="binding_4" android:background="@drawable/bg_circular_white_3" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_verify_code" android:singleLine="true" android:maxLength="6" android:imeOptions="flagNoExtractUi"/>
                    <TextView android:textSize="36mm" android:textColor="@color/color_font_red" android:gravity="center" android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/tv_send_verify_code" android:tag="binding_5" android:background="@drawable/bg_circular_red_border" android:paddingLeft="20mm" android:paddingTop="15mm" android:paddingRight="20mm" android:paddingBottom="15mm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="240mm" android:text="@string/user_send_verify_code" android:layout_marginEnd="40mm"/>
                </FrameLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40mm">
                    <EditText android:textSize="@dimen/font_middle" android:id="@+id/et_pwd" android:tag="binding_6" android:background="@drawable/bg_circular_white_3" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_login_user_pwd" android:singleLine="true" android:maxLength="13" android:inputType="textPassword" android:imeOptions="flagNoExtractUi"/>
                    <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/btn_pwd_visible" android:tag="binding_7" android:layout_width="60mm" android:layout_height="40mm" android:layout_marginEnd="40mm" app:isThrottleFirst="true"/>
                </FrameLayout>
                <TextView android:textSize="@dimen/font_small" android:textColor="@color/color_font" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tv_privacy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20mm"/>
                <TextView android:textSize="@dimen/font_middle" android:textColor="@color/white" android:gravity="center" android:id="@+id/btn_register" android:tag="binding_8" android:background="@drawable/bg_circular_red" android:padding="30mm" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20mm" android:text="@string/user_register"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>
