<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/smssdk_authorize_dialog_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/smssdk_authorize_text_size_l" android:textStyle="bold" android:textColor="@color/smssdk_common_black" android:layout_gravity="center_horizontal" android:id="@+id/smssdk_authorize_dialog_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/smssdk_authorize_dialog_title"/>
    <cn.smssdk.ui.companent.CircleImageView android:layout_gravity="center_horizontal" android:id="@+id/smssdk_authorize_dialog_logo_iv" android:layout_width="45dp" android:layout_height="45dp" android:layout_marginTop="10dp" android:scaleType="centerInside" android:contentDescription="logo"/>
    <View android:background="#f5f5f5" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="10dp"/>
    <TextView android:textSize="@dimen/smssdk_authorize_text_size_s" android:textColor="@color/smssdk_common_text_gray" android:id="@+id/smssdk_authorize_dialog_msg" android:paddingLeft="15dp" android:paddingTop="20dp" android:paddingRight="15dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/smssdk_authorize_msg_sms"/>
    <View android:background="#f5f5f5" android:layout_width="match_parent" android:layout_height="1dp"/>
    <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="45dp">
        <TextView android:textSize="18dp" android:textColor="@color/smssdk_common_black" android:gravity="center" android:id="@+id/smssdk_authorize_dialog_reject_tv" android:background="@drawable/smssdk_authorize_bottom_left_round_btn" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/smssdk_authorize_dialog_reject" android:layout_weight="1"/>
        <View android:background="@color/smssdk_common_line_gray" android:layout_width="1dp" android:layout_height="match_parent"/>
        <TextView android:textSize="18dp" android:textColor="@color/smssdk_common_white" android:gravity="center" android:id="@+id/smssdk_authorize_dialog_accept_tv" android:background="@drawable/smssdk_authorize_bottom_right_round_btn" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/smssdk_authorize_dialog_accept" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
